--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,12 +1,24 @@
+.kt-popup-newsletter input{
 
+width:100px !important;
 
+float:right !important;
+border:1px solid #ccc;
+border-radius:5px;
+box-shadow:1px 1px 5px 1px #ccc;
+height:40px;
+padding-left: 10px;
+}
+.category-menu li>a img{
+  padding-top:10px
+}
 
 .img-responsive-1{
   /* background-repeat: no-repeat; */
   width: 100%;
   height: 100vh;
   /* height: 70%; */
-  background-image: url('../images/slides/21_a.jpg');
+  background-image: url('../images/slides/19.jpg');
   /* z-index: 1111; */
   /* position: absolute; */
   background-size: cover;
@@ -84,6 +96,58 @@ color:#fff;
 .shop_table.cart .product-thumbnail{
   display: none
 }
+.kt-popup-newsletter input{
+  width:72px !important
+}
+.kt-popup-newsletter{
+  padding:20px 0px
+}
+.slick-next{
+   position:absolute;
+   z-index:1;
+   font-size:0px;
+   background-color:#000000e6;
+   border:none;
+   top: 35%;
+   overflow:hidden;
+   padding:10px 15px 0px 10px;
+   margin-left: -20px;
+}
+.slick-next:after{
+content: "\f053 ";
+font-family: FontAwesome;
+font-size:20px;
+color:#fff;
+
+}
+.slick-prev{
+   position:absolute;
+   z-index:1;
+   font-size:0px;
+   background-color:#000000e6;
+   border:none;
+   top: 35%;
+   overflow:hidden;
+   padding:10px 10px 2px 14px;
+   margin-left: -20px;
+}
+.slick-prev:after{
+content: "\f054 ";
+font-family: FontAwesome;
+font-size:20px;
+color:#fff;
+
+}
+.mobile-collpase{
+  padding:1px;
+
+}
+.mobile-collpase h3{
+font-size:11px !important;
+}
+.mobile-collpase .banner-text{
+  margin-bottom:3px
+}
 .img-responsive-1{
   /* background-repeat: no-repeat; */
   width: 100%;
@@ -112,3 +176,38 @@ margin-top:20px;
 .banner-text .title {
     font-size: 24px;
   }
+.kt-popup-newsletter p{
+
+text-transform:uppercase;
+
+text-align:left;
+float:left;
+clear:both;
+font-weight:600;
+padding-top:10px;
+
+}
+
+
+.inputmodel form{
+  overflow:hidden;
+}
+.inputmodel .modal-header h4{
+  color:#fff
+}
+.inputmodel .modal-header,.inputmodel  .modal-footer{
+  background-color:#b28b46;
+  margin-right:-.5px;
+ }
+ .inputmodel  .modal-footer .btn{
+ background-color:#000;
+ border-color:#000;
+ color:#fff;
+ font-weight:bold
+ }
+ .payments{
+   padding:100px 40px 0px;
+ }
+.kt-popup-newsletter{
+  padding-bottom:45px;
+}
