--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -211,3 +211,40 @@ padding-top:10px;
 .kt-popup-newsletter{
   padding-bottom:45px;
 }
+
+.slick-slide .col-xs-4 img,.slick-slide .col-xs-5 img{
+width:100%;
+height:500px
+
+
+}
+.slick-slide .col-xs-4.col2 img{
+width:100%;
+height:240px
+
+
+}
+.slick-slide H3{
+  background:#0000005c;
+  display:inline-block;
+  padding:10px;
+
+}
+@media only screen and (max-width: 767px) {
+
+  .slick-slide .col-xs-4 img,.slick-slide .col-xs-5 img{
+width:100%;
+height:200px
+
+
+}
+.slick-slide .col-xs-4.col2 img{
+width:100%;
+height:100px
+
+
+}
+}
+.proceed{
+  margin:0 10px 
+}
