--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -18,7 +18,7 @@ padding-left: 10px;
   width: 100%;
   height: 100vh;
   /* height: 70%; */
-  background-image: url('../images/slides/19.jpg');
+  background-image: url('../images/slides/XiXiFront.jpg');
   /* z-index: 1111; */
   /* position: absolute; */
   background-size: cover;
@@ -34,7 +34,7 @@ padding-left: 10px;
 
   .your-class1{
     background-color: #ffffff;
-    padding: 105px 25px 0px 26px;
+    padding: 105px 0px 0px 0px;
   }
 .slick-prev{
   position:absolute;
@@ -108,10 +108,11 @@ color:#fff;
    font-size:0px;
    background-color:#000000e6;
    border:none;
-   top: 35%;
+   top: 45%;
    overflow:hidden;
    padding:10px 15px 0px 10px;
    margin-left: -20px;
+   left: 19px;
 }
 .slick-next:after{
 content: "\f053 ";
@@ -126,10 +127,11 @@ color:#fff;
    font-size:0px;
    background-color:#000000e6;
    border:none;
-   top: 35%;
+   top: 45%;
    overflow:hidden;
    padding:10px 10px 2px 14px;
    margin-left: -20px;
+   right: 20px;
 }
 .slick-prev:after{
 content: "\f054 ";
@@ -138,10 +140,7 @@ font-size:20px;
 color:#fff;
 
 }
-.mobile-collpase{
-  padding:1px;
 
-}
 .mobile-collpase h3{
 font-size:11px !important;
 }
@@ -153,11 +152,12 @@ font-size:11px !important;
   width: 100%;
   height: 120vh;
   /* height: 70%; */
-  background-image: url('../images/slides/22.jpeg');
+  background-image: url('../images/slides/XiXiFront.jpg');
   /* z-index: 1111; */
   /* position: absolute; */
   background-size: cover;
   background-position: 100%;
+  background-position: 25% 0px;
   }
 .block-category-carousel .title {
 
@@ -246,5 +246,27 @@ height:100px
 }
 }
 .proceed{
-  margin:0 10px 
+  margin:0 10px
+}
+.mobile-collpase{
+  padding:0px;
+}
+
+.logo-sider{
+  color:#fff;
+  font-size:26px;
+  border:2px dotted #c99947;
+  width:fit-content;
+  padding:15px
+
+
+}
+.logo-sider-black{
+  color:#333;
+  font-size:26px;
+  border:2px dotted #c99947;
+  width:fit-content;
+  padding:15px
+
+
 }
