--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -34,7 +34,7 @@ padding-left: 10px;
 
   .your-class1{
     background-color: #ffffff;
-    padding: 105px 0px 0px 0px;
+    padding: 105px 25px 0px 25px;
   }
 .slick-prev{
   position:absolute;
@@ -150,14 +150,14 @@ font-size:11px !important;
 .img-responsive-1{
   /* background-repeat: no-repeat; */
   width: 100%;
-  height: 120vh;
+  /* height: 120vh; */
   /* height: 70%; */
   background-image: url('../images/slides/XiXiFront.jpg');
   /* z-index: 1111; */
   /* position: absolute; */
   background-size: cover;
-  background-position: 100%;
-  background-position: 25% 0px;
+  /* background-position: 100%; */
+  background-position: -550px 0px;
   }
 .block-category-carousel .title {
 
@@ -218,6 +218,9 @@ height:500px
 
 
 }
+.modal-open{
+  overflow:auto
+}
 .slick-slide .col-xs-4.col2 img{
 width:100%;
 height:240px
@@ -238,6 +241,15 @@ height:200px
 
 
 }
+.category-menu li {
+  display: block;
+  padding: 0
+}
+
+ .your-class1{
+    background-color: #ffffff;
+    padding: 105px 0px 0px 0px;
+  }
 .slick-slide .col-xs-4.col2 img{
 width:100%;
 height:100px
