--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -31,6 +31,13 @@ padding-left: 10px;
     right: 25px;
     top: 20px;
   }
+    .main-logo1{
+    position: absolute;
+    z-index: 1;
+
+    top: 20px;
+  }
+
 
   .your-class1{
     background-color: #ffffff;
@@ -90,12 +97,18 @@ color:#fff;
   margin-left: 375px;
   height: 100vh;
 }
+.shop_table th .product-description{
+  width:70%
+}
 
 }
-@media only screen and (max-width: 767px) {
-.shop_table.cart .product-thumbnail{
-  display: none
+.shop_table th {
+    padding: 15px 0;
+    border-bottom: 2PX SOLID #CCC;
 }
+
+@media only screen and (max-width: 767px) {
+
 .kt-popup-newsletter input{
   width:72px !important
 }
@@ -150,14 +163,14 @@ font-size:11px !important;
 .img-responsive-1{
   /* background-repeat: no-repeat; */
   width: 100%;
-  /* height: 120vh; */
+  height: 120vh;
   /* height: 70%; */
   background-image: url('../images/slides/XiXiFront.jpg');
   /* z-index: 1111; */
   /* position: absolute; */
   background-size: cover;
   /* background-position: 100%; */
-  background-position: -550px 0px;
+  background-position: -718px 0px;
   }
 .block-category-carousel .title {
 
@@ -281,4 +294,21 @@ height:100px
   padding:15px
 
 
+}
+td.product-description{
+  width: 70%;
+}
+.logo-sider-black1{
+  color:#333;
+  font-size:26px;
+  border:2px dotted #c99947;
+  /* width:fit-content; */
+  padding:15px;
+  text-align: center;
+}
+.color_logo_class_white {
+  color:white
+}
+.color_logo_class_black {
+  color:black
 }
